#Integrated slipper source

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string-array name="source_choices">
         <item>Build-in Sensors</item>
         <item>DoorBLE</item>
+        <item>SlipperBLE</item>
     </string-array>
 
     <string-array name="path_choices">
